# ortho_pipeline

./: .gitignore  README.md  config.yml  gui.py  pyproject.toml
ortho_pipeline/: base.py  env.yml  pipeline.py
ortho_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
ortho_pipeline/ortho_pipeline.egg-info/: SOURCES.txt  entry_points.txt
ortho_pipeline/stages/: blend.py  cloudmask.py  cogify.py  colorbalance.py  cutline.py  mosaic.py  preproc.py  scale8bit.py
ortho_pipeline/utils/: raster.py
