[project]
name = "ortho_pipeline"
version = "0.1.0"
description = "Modüler ortomozai̇k iş akışı"
requires-python = ">=3.11"

[project.entry-points."ortho_pipeline.stages"]
preproc      = "ortho_pipeline.stages.preproc:Preproc"
cloudmask    = "ortho_pipeline.stages.cloudmask:CloudMask"
mosaic       = "ortho_pipeline.stages.mosaic:Mosaic"
colorbalance = "ortho_pipeline.stages.colorbalance:ColorBalance"
cutline      = "ortho_pipeline.stages.cutline:Cutline"     # ← yeni
blend        = "ortho_pipeline.stages.blend:Blend"         # ← yeni
cogify       = "ortho_pipeline.stages.cogify:Cogify"
scale8bit    = "ortho_pipeline.stages.scale8bit:Scale8bit"